# excalibur-detector

control/: setup.py
control/excalibur/: adapter.py  detector_sim.py  hl_detector.py
control/excalibur/testing/: test_detector.py  test_hl_detector.py
python/: setup.cfg
python/src/excalibur_detector/control/: definitions.py  hl_detector.py
