[metadata]
name = excalibur-detector
description = EXCALIBUR detector plugins for ODIN control
url = https://github.com/dls-controls/excalibur-detector/python
author = Tim Nicholls
author_email = tim.nicholls@stfc.ac.uk
license = Apache License 2.0
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7

[options]
python_requires = >=3.7
packages = find:
# =src is interpreted as {"": "src"}
# as per recommendation here https://hynek.me/articles/testing-packaging/
package_dir =
    =src

install_requires =
    odin-control @ git+https://git@github.com/odin-detector/odin-control.git@1.5.0
    configparser
    enum34
    requests  # For excalibur_test_app

[options.packages.find]
where = src

[options.extras_require]
# For development tests/docs
dev =
    pytest-cov

[options.entry_points]
# Include a command line script
console_scripts =
    excalibur_control = odin.main:main
    excalibur_test_app  = excalibur_detector.control.client.test_app:main

[flake8]
max-line-length = 100

[coverage:paths]
# Tests are run from installed location, map back to the src directory
source =
    ./
    **/site-packages/

[versioneer]
VCS = git
style = pep440
versionfile_source = src/excalibur_detector/_version.py
versionfile_build = excalibur_detector/_version.py
tag_prefix=
